--- a/CH32V003_IAP/.settings/org.eclipse.core.resources.prefs
+++ b/CH32V003_IAP/.settings/org.eclipse.core.resources.prefs
@@ -2,6 +2,7 @@ eclipse.preferences.version=1
 encoding//Core/core_riscv.c=GBK
 encoding//Core/core_riscv.h=GBK
 encoding//Debug/debug.c=GBK
+encoding//Ld/Link.ld=GBK
 encoding//Peripheral/inc/ch32v00x.h=GBK
 encoding//Peripheral/inc/ch32v00x_flash.h=GBK
 encoding//Peripheral/inc/ch32v00x_gpio.h=GBK
@@ -11,10 +12,17 @@ encoding//Peripheral/src/ch32v00x_flash.c=GBK
 encoding//Peripheral/src/ch32v00x_rcc.c=GBK
 encoding//Peripheral/src/ch32v00x_usart.c=GBK
 encoding//Startup/startup_ch32v00x.S=GBK
+encoding//User/ch32v00x_conf.h=GBK
+encoding//User/ch32v00x_it.c=GBK
+encoding//User/ch32v00x_it.h=GBK
 encoding//User/flash.c=GBK
 encoding//User/flash.h=GBK
 encoding//User/iap.c=GBK
 encoding//User/iap.h=GBK
 encoding//User/main.c=GBK
 encoding//User/system_ch32v00x.c=GBK
+encoding//User/system_ch32v00x.h=GBK
 encoding//obj/CH32V003_IAP.map=GBK
+encoding//obj/makefile=GBK
+encoding//obj/objects.mk=GBK
+encoding//obj/sources.mk=GBK
